[gd_scene load_steps=3 format=3 uid="uid://8x8rhshf11pk"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_hqdu7"]
[ext_resource type="PackedScene" uid="uid://b0nkmoxqxumsn" path="res://test_level.tscn" id="2_rutdk"]

[node name="Main" type="Node"]
process_mode = 3
script = ExtResource("1_hqdu7")

[node name="MainMenu" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchor_left = 0.5
anchor_top = 0.500772
anchor_right = 0.568576
anchor_bottom = 0.500772
offset_top = -2.5
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="TestJump" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.221519
anchor_top = 39.3
anchor_right = 2.80409
anchor_bottom = 119.755
offset_left = -43.5
offset_top = -15.5
offset_right = -18.523
offset_bottom = -194.775
grow_horizontal = 2
grow_vertical = 2
text = "TestWorld"
metadata/_edit_use_anchors_ = true

[node name="World" type="Node2D" parent="."]
process_mode = 1

[node name="TestLevel" parent="World" instance=ExtResource("2_rutdk")]
process_mode = 4
position = Vector2(30, 16)

[node name="PauseMenu" type="Control" parent="."]
process_mode = 2
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MainMenu" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Return to Main Menu"

[connection signal="pressed" from="MainMenu/TestJump" to="." method="teststart"]
[connection signal="button_down" from="PauseMenu/MainMenu" to="." method="MainMenuButton"]
